kubernetes/k8s-deployment.yaml
###################################
# abcall-websocket-service
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abcall-websocket-service
  labels:
    app: abcall-websocket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abcall-websocket-service
  template:
    metadata:
      labels:
        app: abcall-websocket-service
    spec:
      containers:
        - name: abcall-websocket-service
          image: abcall.azurecr.io/abcall-websocket-service:1.0.0
          ports:
            - containerPort: 3009
            - containerPort: 9000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: abcall-websocket-service-service
spec:
  type: LoadBalancer
  selector:
    app: abcall-websocket-service
  ports:
    - name: service-port
      protocol: TCP
      port: 3009
      targetPort: 3009
    - name: websocket-port
      protocol: TCP
      port: 9000
      targetPort: 9000
