kubernetes/k8s-ingress.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abcall-websocket-ingress
  labels:
    name:  abcall-websocket-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: abcall-websocket-service-service
            port: 
              number: 3009
      - pathType: Prefix
        path: /
        backend:
          service:
            name: abcall-websocket-health
            port: 
              number: 3009
      - pathType: Prefix
        path: /ws
        backend:
          service:
            name: abcall-websocket-service
            port:
              number: 9000
